[package]
name = "web_fetch"
version = "0.0.0"
authors = ["Richard Anaya"]
edition = "2018"
description = "A library for fetching websites in web assembly"
license = "MIT OR Apache-2.0"
categories = ["wasm", "no-std"]
repository = "https://github.com/richardanaya/http_fetch"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
